# Control-software

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  PROJECT_PLAN.md  README.md  main.cpp  run.sh  shm_test.cpp
Sim/: Simulation
Sim/config/: config_default.json  config_full.json  config_stop.json
include/: automatic_controls.hpp  data_structures.hpp  dummy_data.hpp  failure_detection.hpp  input_validation.hpp  json_output.hpp  log.hpp  mqtt_client.hpp  mqtt_client_UI.hpp  shared_memory_wrapper.cpp  shared_memory_wrapper.hpp  text_ui.hpp
src/: CMakeLists.txt  automatic_controls.cpp  dummy_data.cpp  failure_detection.cpp  json_output.cpp  log.cpp  mqtt_client.cpp  mqtt_client_UI.cpp  shared_memory_wrapper.cpp  text_ui.cpp
tests/: CMakeLists.txt  tests.cpp
